# studiomaker-macos

./: CLAUDE.md  README.md
.github/workflows/: ios.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/plugins/pencilkit/src/: lib.rs
src-tauri/src/: lib.rs  menu.rs
